Flush HTMLViewSourceParser on the end of document

Undecoded bytes may be left in the TextResourceDecoder on view-source
mode document.

BUG=661969

Review-Url: https://codereview.chromium.org/2542393002
Cr-Commit-Position: refs/heads/master@{#435888}

Former-commit-id: 1dc6c96302f6607d3ecc2a230ecf05521bff1066